<resources>
    <string name="app_name">Cricket Score</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="teamA_score">0</string>
    <string name="teamB_score">0</string>
    <string name="teamA_wickets">0</string>
    <string name="teamB_wickets">0</string>
    <string name="reset">reset</string>
    <string name="out">out</string>
    <string name="one_run">+1 run</string>
    <string name="four_runs">+4 runs</string>
    <string name="six_runs">+6 runs</string>
</resources>
