<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/team_A"
                android:textColor="#616161"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/teamA_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_a_wickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/teamA_wickets"
                android:textColor="#f00101"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button"
                style="@style/button_style"
                android:onClick="addOneForA"
                android:text="@string/one_run" />

            <Button
                android:id="@+id/button2"
                style="@style/button_style"
                android:onClick="addFourForA"
                android:text="@string/four_runs" />

            <Button
                android:id="@+id/button3"
                style="@style/button_style"
                android:onClick="addSixForA"
                android:text="@string/six_runs" />

            <Button
                android:id="@+id/button4"
                style="@style/button_style"
                android:onClick="outForTeamA"
                android:text="@string/out" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/team_B"
                android:textColor="#616161"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/teamB_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_b_wickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/teamB_wickets"
                android:textColor="#f00101"
                android:textSize="32sp" />

            <Button
                style="@style/button_style"
                android:onClick="addOneForB"
                android:text="@string/one_run" />

            <Button
                style="@style/button_style"
                android:onClick="addFourForB"
                android:text="@string/four_runs" />

            <Button
                style="@style/button_style"
                android:onClick="addSixForB"
                android:text="@string/six_runs" />

            <Button
                style="@style/button_style"
                android:onClick="outForTeamB"
                android:text="@string/out" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset" />
</RelativeLayout>



